# boost_server

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: CssWork.cpp.B1134575AE5A36E7.idx  main.cpp.46A9133661790DB5.idx
Client/: CMakeLists.txt
Client/include/: GroupData.h  connection.h  mainclient.h
Client/source/: connection.cpp  main.cpp  mainclient.cpp  mainclient.ui
Server/: CMakeLists.txt
Server/.cache/clangd/index/: CssWork.h.1F0563C10F45B210.idx  Server.cpp.5208CF0EDEA0153D.idx  Server.h.67B42B329808658A.idx
Server/include/: ClientSession.h  CssWork.h  GroupData.h  ImitatorFar.h  Server.h
Server/source/: ClientSession.cpp  CssWork.cpp  ImitatorFar.cpp  Server.cpp  main.cpp
include/: ClientSession.h  CssWork.h  GroupData.h  Server.h
src/: ClientSession.cpp  Server.cpp  main.cpp
